<resources>
    <string name="app_name">Heart House Hospice</string>
    <string name="welcome_page">HEART HOUSE </string>
    <string name="welcome_page1">H o s p i c e</string>
    <string name="ButtonText">Log On</string>

    <string name="username">User Name</string>
    <string name="Hint">User Name/Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>


    <string name="report_form">HHH Volunteer Hours Report </string>
    <string name="name">Name:</string>
    <!-- <string name="reportingMonth">Reporting Month:</string>-->
    <string name="date">Date</string>
    <string name="type">Type: </string>
    <!--<string name="visitingTime">Visiting Time: </string>-->
    <!--<string name="visitingActivities">Visiting Activities: </string>-->

    <string name="direct">Direct</string>
    <string name="direct_form">Direct Service</string>
    <string name="option1">Option 1:</string>
    <string name="option2">Option 2:</string>
    <string name="inHome">In-Home</string>

    <string name="inHome_head">In-Home</string>
    <string name="client_name">Client Name:</string>
    <string name="client_type">Client Type: </string>
    <string name="palliative">Palliative </string>
    <string name="caregiver">Caregiver </string>
    <string name="bereaved">Bereaved </string>
    <string name="numberOfPerson">Number of Person Supported: </string>
    <string name="numberOfVisit">Visit Activities (more than one): </string>
    <string name="companioning">Companioning  </string>
    <string name="comp_therapy">Comp Therapy: </string>
    <string name="reiki">Reiki </string>
    <string name="tt">TT </string>
    <string name="aroma">Aroma </string>
    <string name="respite">Respite </string>
    <string name="spiritual">Spiritual </string>
    <string name="art">Art Therapy </string>
    <string name="music">Music Therapy </string>
    <string name="note">Notes: </string>


    <string name="inOffice">In-Office</string>
    <string name="inOffice_head">In-Office (More than one)</string>
    <string name="spa">SPA</string>
    <string name="dayProgram">Day Program</string>
    <string name="ct">CT</string>
    <string name="training1">Training</string>
    <string name="outreach1">Outreach</string>
    <string name="art_therapy">Art Therapy </string>
    <string name="music_therapy">Music Therapy </string>

    <string name="indirect">Indirect</string>
    <string name="indirect_form">Indirect Service (No Clients)</string>
    <string name="admin">Admin</string>
    <string name="board">Board</string>
    <string name="training">Training</string>
    <string name="fundraising">Fundraising</string>
    <string name="outreach">Outreach</string>


    <string name="submit">Submit </string>
    <string name="enter_username">Enter your username here</string>
    <string name="enter_pass">Enter your password here</string>
    <string name="signin">Sign In</string>
    <string name="success">You successfully logged in!</string>
    <string name="fail">The username or password you entered was incorrect</string>
    <string name="title_activity_user_history">UserHistoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="pick_time">Pick Time</string>
    <string name="enter_location">Enter a Location</string>
    <string name="create_event">Create Event</string>
    <string name="enter_reminder">Reminder time (in minutes)</string>
    <string name="duration">Duration(hours)</string>
    <string name="appointmentType">What type of appointment?</string>
    <string name="appointmentDescription">Description</string>

    <string name="title_activity_main_menu">MainMenu</string>
    <string name="main_menu">Main Menu</string>
    <string name="timeSheet">Volunteer Hours </string>
    <string name="appointment"> Appointment Calendar</string>
    <string name="history">History</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">Info@hearthousehospice.com</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="start_time">Start time</string>

</resources>
