<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/Hex_Gray90"
    tools:context=".InHomeActivity">

    <TextView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/inHome_head"
        android:textColor="@color/Hex_Blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/times_new_roman_normal"
        />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@+id/form"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/client_name"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form"
        android:layout_marginStart="140dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp"
        android:inputType="textPersonName"
        app:fontFamily="@font/times_new_roman_normal" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@+id/textViewName"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/client_type"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/CBPalliative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/editTextName"
        android:layout_marginStart="140dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/palliative"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/CBCaregiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/CBPalliative"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/caregiver"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />
    <CheckBox
        android:id="@+id/CBBereaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/CBCaregiver"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/bereaved"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textViewPerson"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@+id/CBBereaved"
        android:layout_marginTop="-3dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/numberOfPerson"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextNumPerson"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CBBereaved"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp"
        app:fontFamily="@font/times_new_roman_normal"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textViewComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@+id/textViewPerson"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/comp_therapy"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/CBReiki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/editTextNumPerson"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-3dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/reiki"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextReiki"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumPerson"
        android:layout_marginStart="220dp"
        android:layout_marginTop="-4dp"
        android:ems="10"
        android:hint="Time in Hours/Minute"
        android:textColor="@color/Hex_Blue"
        android:textSize="10sp"
        app:fontFamily="@font/times_new_roman_normal" />

    <CheckBox
        android:id="@+id/CBTT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/CBReiki"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/tt"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextTT"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextReiki"
        android:layout_marginStart="220dp"
        android:layout_marginTop="-9dp"
        android:ems="10"
        android:hint="Time in Hours/Minute"
        android:textColor="@color/Hex_Blue"
        android:textSize="10sp"
        app:fontFamily="@font/times_new_roman_normal" />
    <CheckBox
        android:id="@+id/CBAroma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/CBTT"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-5dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/aroma"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editAroma"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTT"
        android:layout_marginStart="220dp"
        android:layout_marginTop="-11dp"
        android:ems="10"
        android:hint="Time in Hours/Minute"
        android:textColor="@color/Hex_Blue"
        android:textSize="10sp"
        app:fontFamily="@font/times_new_roman_normal" />

    <CheckBox
        android:id="@+id/CBCompanioning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/CBAroma"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/companioning"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editCompanioning"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAroma"
        android:layout_marginStart="140dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Time in Hours/Minute"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp"
        app:fontFamily="@font/times_new_roman_normal" />

    <CheckBox
        android:id="@+id/CBRespite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/CBCompanioning"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/respite"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editRespite"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCompanioning"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="Time in Hours/Minute"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp"
        app:fontFamily="@font/times_new_roman_normal" />

    <CheckBox
        android:id="@+id/CBSpiritual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@id/CBRespite"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/spiritual"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editSpiritual"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editRespite"
        android:layout_marginStart="140dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="Time in Hours/Minute"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp"
        app:fontFamily="@font/times_new_roman_normal" />

    <TextView
        android:id="@+id/textViewNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@+id/CBSpiritual"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/note"
        android:textColor="@color/Hex_Blue"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="375dp"
        android:layout_height="77dp"
        android:layout_below="@id/textViewNotes"
        android:layout_weight="0.375"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/Hex_Blue"
        app:fontFamily="@font/times_new_roman_normal" />

    <Button
        android:id="@+id/btn_inHomeSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/times_new_roman_normal"
        android:text="@string/submit"
        android:textColor="@color/Hex_Blue"
        android:textStyle="bold" />

</RelativeLayout>
