<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    tools:context="com.example.cst8334project.LoginActivity">

    <ImageView

        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:src="@drawable/logo"
        app:srcCompat="@drawable/logo" />

    <EditText

        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#fbf9f9"
        android:fontFamily="@font/times_new_roman_normal" />

    <EditText

        android:id="@+id/edit_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="#fbf9f9"
        android:fontFamily="@font/times_new_roman_normal"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:fontFamily="@font/times_new_roman_normal"
        />




</LinearLayout>
