<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/Hex_Gray90"
    tools:context=".IndirectActivity">

    <TextView
        android:id="@+id/form1"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/direct_form"
        android:textColor="@color/Hex_Blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/inHome_btn"
            android:layout_width="242dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_weight="0.35"
            android:ems="10"
            android:text="@string/inHome"
            android:textColor="@color/Hex_Blue"
            android:textStyle="italic" />

        <Button
            android:id="@+id/inOffice_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_weight="0.35"
            android:ems="10"
            android:text="@string/inOffice"
            android:textColor="@color/Hex_Blue"
            android:textStyle="italic" />


    </LinearLayout>

</LinearLayout>